--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -6,8 +6,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-link" href="#" [routerLink]="'/home'" routerLinkActive="active">
-        Home
+      <a class="nav-link" href="#" [routerLink]="'/main'" routerLinkActive="active">
+        Main
       </a>
       <a class="nav-link" href="#" [routerLink]="'/about'" routerLinkActive="active">
         About
